k8s/customers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: customer                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: customer               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: customer:latest       # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: customer           # ім'я контейнеру
          ports:
            - containerPort: 3003  # порт по якому можна звертатись до поди
