k8s/customers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customers-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/customers
            pathType: "Prefix"
            backend:
              service:
                name: customers-service
                port:
                  number: 8080
